# arc-dsl

./: LICENSE  README.md  dsl.py  main.py  pyproject.toml  setup.py  solvers.py  tests.py
arcdsl/: __init__.py  dsl.py  solvers.py  tests.py
generator_configs/: ct_config.json  gl_config.json  om_config.json  or_config.json  pd_config.json
